<resources>
    <string name="app_name">你好理工</string>
    <string name="str_teaching_revaluation">评教</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_copyright">"Copyright © 2014 emptypointer.com Team. All Rights Reserved. "</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帐号/邮箱/学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="str_sign_up">注册</string>
    <string name="error_invalid_email">用户名不能少于6个字符且不能以数字开头</string>
    <string name="error_invalid_password">密码不能少于6个字符</string>
    <string name="error_field_required">所填信息不能为空</string>
    <string name="str_sign_up_immediately">立即注册</string>
    <string name="message_unparsed_json">server response cannot be parse！</string>
    <string name="message_weak_internet">网络连接失败，请检查网络连接：</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="str_commit">提交</string>
    <string name="str_agree">同意</string>
    <string name="str_hellocdut_user_agreement">《你好理工用户协议》</string>
    <string name="message_need_acept_agreement">需要同意用户协议才能注册！</string>
    <string name="user_agreement">用户协议</string>
    <string name="str_user_agreement">用户协议</string>
    <string name="title_activity_reset_pwd">重置密码</string>
    <string name="str_forgotten_pwd">无法登录</string>
    <string name="str_one_key_evaluation">一键评教</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_try_reset_pwd">尝试重置密码</string>
    <string name="message_wrong_stu_id_format">学号由12-13位数字组成</string>
    <string name="str_stu_id">学号</string>
    <string name="str_evaluation_level">请选择一个评分</string>
    <string name="str_aao_pwd">教务密码</string>
    <string name="str_new_pwd">新密码</string>
    <string name="str_mail">邮箱</string>
    <string name="str_captcha">验证码</string>
    <string name="str_send_captcha">发送验证码</string>
    <string name="message_wrong_email_format">这不是一个有效的邮箱地址</string>
    <string name="message_wrong_captcha_format">验证码为4位字符</string>
    <string name="str_format_last_time">%1$s秒后重新发送</string>
    <string name="action_settings">设置</string>
    <string name="str_format_erro">服务器错误：%1$s</string>
    <string name="erro_json_parse">数据解析失败，请稍候再试！</string>
    <string name="erro_cannot_update_nickname">更新用户昵称失败，请重新登录！</string>
    <string name="str_format_account">帐号：%1$s</string>
    <string name="str_format_edit_filed">修改%1$s</string>
    <string name="str_avatar">头像</string>
    <string name="str_account">帐号</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_motto">座右铭</string>
    <string name="str_love_status">恋爱状态</string>
    <string name="str_sex_orientation">性取向</string>
    <string name="str_real_name">实名</string>
    <string name="str_gender">性别</string>
    <string name="str_birth_date">出生日期</string>
    <string name="str_student_number">学号</string>
    <string name="str_institute">学院</string>
    <string name="str_major">专业</string>
    <string name="str_class">班级</string>
    <string name="str_entrance_date">入学年份</string>
    <string name="str_my_profile">我的资料</string>
    <string name="str_info_permission">修改资料“%1$s”的可见范围</string>
    <string name="str_take_photo">拍照</string>
    <string name="str_gallery">相册</string>
    <string name="str_aao">学生证</string>
    <string name="str_return">返回</string>
    <string name="str_chose_method_get_photo">照片来源</string>
    <string name="message_erro_stu_id_missmatch">暂时无法获取你的学生证照片，试试其他的方法设置头像吧</string>
    <string name="str_upload_avatar">上传头像</string>
    <string name="str_reselect">重新选择</string>
    <string name="str_comfirm">确定</string>
    <string name="str_modify">修改</string>
    <string name="error_field_min_length">所填内容不能小于%1$s</string>
    <string name="error_field_max_length">所填内容不能大于%1$s</string>
    <string name="str_secret">保密</string>
    <string name="str_single">求交往</string>
    <string name="str_in_love">热恋中</string>
    <string name="str_visiable_set">可见范围：</string>
    <string name="str_all_know">所有人</string>
    <string name="str_friend_know">仅好友</string>
    <string name="str_self_know">仅自己</string>
    <string name="str_keep_alone">独终身</string>
    <string name="str_double_sex">双性</string>
    <string name="str_same_sex">同性</string>
    <string name="str_oppositie_sex">异性</string>
    <string name="str_had_bound">已绑定</string>
    <string name="str_bind">绑定</string>
    <string name="str_comfirm_bind">立即绑定</string>
    <string name="str_cancel_bind">解除绑定</string>
    <string name="str_cancel">取消</string>
    <string name="str_campus_card">一卡通</string>
    <string name="str_lib_card">借阅证</string>
    <string name="str_relative_account">关联帐号</string>
    <string name="hint_cancel_bind_sck">解除绑定？</string>
    <string name="message_unbind_aao">解除教务绑定后你将无法使用查看日程、成绩等功能。同时，由于实名资料重置，你将失去你的专业人脉！</string>
    <string name="message_unbind_lib">解除图书馆绑定后你将无法使用查阅图书、续借等功能！</string>
    <string name="message_unbind_campus">解除一卡通绑定后你将无法使用查询一卡通消费记录等功能！</string>

    <string name="hint_query_grade">期末成绩、考核成绩，还要打开浏览器登录教务处？你OUT了！</string>
    <string name="hint_query_national_exam">国家考试查询网站地址难记又难找？点我即可知道！</string>
    <string name="hint_query_class_room">去哪上自习？一教到九教，教室状态全知晓！</string>
    <string name="hint_query_tel">未接短号？是那个TA还是推销？轻松识身份！</string>
    <string name="hint_query_teach_plan">我的专业要学什么？TA的有没有和我修一样的课程呢？点我即可知晓！</string>

    <string name="str_query_grade">学校考核成绩查询</string>
    <string name="str_query_national_exam">等级考试查询</string>
    <string name="str_query_classroom_status">教室状态查询</string>
    <string name="str_query_tel_number">移动短号查询</string>
    <string name="str_query_teach_plan">教学计划查询</string>
    <string name="title_activity_addones">插件</string>
    <string name="str_query">查询</string>
    <string name="str_course">课程</string>
    <string name="str_lib">图书馆</string>
    <string name="str_need_to_bind">需要先关联账号</string>
    <string name="message_need_to_bind">该功能需要在绑定%1$s后使用</string>
    <string name="str_current_weak">本周</string>
    <string name="str_return_current_week">返回本周</string>
    <string name="str_format_week">第%1$s周</string>
    <string name="str_format_current_week">第%1$s周(本周)</string>
    <string name="str_wonderful">真棒！</string>
    <string name="message_dont_show_noon_class">太棒了，你在本学期都没有中午进行的病娇课程！是否隐藏中午的日程获得更开阔的视野?(隐藏后可以在右上角日程设置中恢复显示)</string>
    <string name="message_create_shortcut">创建桌面课表快捷方式成功</string>
    <string name="str_negative">否</string>
    <string name="str_positive">是</string>
    <string name="str_refresh_schedule">更新课表</string>
    <string name="str_course_setting">课表设置</string>
    <string name="str_set_background">设置课表背景</string>
    <string name="str_desk_schedule">创建桌面日程</string>
    <string name="message_wrong_unexsisted_sd_card">未检测到外部存储，无法使用该功能！</string>
    <string name="str_hint">提示</string>
    <string name="message_has_noon_class">你在本学期有中午进行的病娇课程，隐藏可能会错过上课，确定隐藏么？</string>
    <string name="str_hint_phone_num">6位短号/11位长号</string>
    <string name="message_wrong_erro_num_format">输入内容不是一个有效的号码</string>
    <string name="message_send_succes">查询请求已送交运营商，请留意短信！</string>
    <string name="message_wrong_missing_permission_to_call_logs">访问通信记录失败，请在安全软件中允许访问或者手动输入！</string>
    <string name="str_call_log">最近通话</string>
    <string name="str_unknown_number">陌生号码</string>
    <string name="str_miss_call">未接</string>
    <string name="str_format_major">专业：%1$s</string>
    <string name="str_format_make_date">创建时间：%1$s</string>
    <string name="str_key_word">关键字</string>

    <string name="str_format_book_id">条形码：%1$s</string>
    <string name="str_format_return_time">归还时间：%1$s</string>
    <string name="str_format_borrow_time">外借时间：%1$s</string>
    <string name="str_format_book_index_id">索书号：%1$s</string>
    <string name="str_format_renew_time">续借：%1$s次</string>
    <string name="str_format_book_location">馆藏地点：%1$s</string>

    <string name="str_format_teacher">教师:%1$s</string>
    <string name="str_format_credits">学分:%1$s</string>
    <string name="str_format_course_id">班号:%1$s</string>
    <string name="str_format_semester">学期:%1$s</string>
    <string name="str_format_insert_time">录入日期:%1$s</string>
    <string name="message_get_json_sucess">数据获取成功！</string>
    <string name="str_over_dead_line">已超期</string>

    <string name="message_format_renew_book_finish">《%1$s》已完成续借，归还时间已更新至%2$s</string>
    <string name="message_hasnot_more">没有更多了！TAT</string>

    <string name="str_format_author">作者：%1$s</string>
    <string name="str_format_adone_version">当前版本：%1$s</string>
    <string name="str_format_introduction">介绍：%1$s</string>
    <string name="str_format_publish_time">发布时间：%1$s</string>
    <string name="uninstall">卸载</string>
    <string name="install">安装</string>
    <string name="str_on_dowanload_addone">正在下载插件： %1$s</string>
    <string name="str_updating_compelet">你好理工 ver:%1$s下载完成！</string>
    <string name="message_start_download_addones">后台下载任务已开始，稍候将自动为您安装插件！</string>
    <string name="hint_need_input_captcha">需要输入验证码</string>
    <string name="str_quit">退出</string>
    <string name="str_card_status">一卡通状态</string>
    <string name="str_main_balance">主钱包余额</string>
    <string name="str_subsidy_balance">补助余额</string>
    <string name="str_format_amount">交易金额：%1$s</string>
    <string name="str_format_back_amount">圈存金额：%1$s</string>
    <string name="str_format_balance">余额：%1$s</string>
    <string name="str_format_opetater">操作员：%1$s</string>
    <string name="str_format_terminal_name">终端：%1$s</string>
    <string name="str_format_bank_type">圈存方式：%1$s</string>
    <string name="str_format_result">结果：%1$s</string>
    <string name="str_format_location">地点：%1$s</string>
    <string name="str_format_time">时间：%1$s</string>
    <string name="str_start_date">开始日期：</string>
    <string name="str_end_date">结束日期：</string>
    <string name="message_wrong_date_pick">开始日期不能晚于结束日期</string>
    <string name="str_setting">设置</string>
    <string name="str_copyright_emptypointer">EmptyPointer 版权所有</string>
    <string name="str_about">关于</string>
    <string name="str_format_version">当前版本  V%1$s</string>
    <string name="str_cheaking_update">正在检查新版本</string>
    <string name="str_format_has_new_version">你好理工  %1$s 已发布！</string>
    <string name="str_update_detail">更新内容：</string>
    <string name="str_update_time">发布时间：</string>
    <string name="str_update_delay">下次再说</string>
    <string name="str_update_immediately">立即更新</string>
    <string name="str_on_start_updating">新版更新包已进入后台下载，稍后将自动为您安装！</string>
    <string name="str_on_denied">功能所需权限被禁用，请开启相应权限后再试</string>
    <string name="str_app_file_name">HelloCDUT%1$s.apk</string>
    <string name="str_format_app_name"><![CDATA[你好理工  %1$s<]]></string>
    <string name="ask_clean_cache">清理缓存？</string>
    <string name="message_clean_cache">清除缓存将清除所有的缓存数据，使用部分功能需要重新加载数据，在正常使用的情况通常不建议这么做！</string>
    <string name="message_clean_cache_compelete">已成功清理缓存</string>

    <string name="title_activity_guide">GuideActivity</string>
    <string name="str_finish_guide">即刻开启精彩校园之旅</string>
    <string name="str_feedback">意见反馈</string>
    <string name="message_feed_back">有什么意见或建议可以在这里告诉EmptyPointer</string>
    <string name="str_edit">编辑</string>
    <string name="str_change_password">修改密码</string>
    <string name="logout">退出</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
</resources>
