<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emptypointer.hellocdut.ui.account.LoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/etPassword"
                    android:maxLines="1"
                    android:maxLength="60"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/str_commit"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:maxLength="16"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/bg_selectable_item"
                    android:src="@drawable/ic_eye_off" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/layoutAgreement"
                android:visibility="gone"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_agree"
                    android:textSize="@dimen/font_medium_size" />

                <TextView
                    android:id="@+id/tvAgrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:text="@string/str_hellocdut_user_agreement"
                    android:textColor="@color/colorPrimary"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="@dimen/font_medium_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rey.material.widget.Button
                    android:id="@+id/btnToSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_medium_margin"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/str_sign_up"
                    android:textColor="@color/color_ep_white"
                    android:textStyle="bold"
                    app:v_styleId="@array/button_raise_wave" />

                <com.rey.material.widget.Button
                    android:id="@+id/btnCommit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/color_ep_white"
                    android:textStyle="bold"
                    app:v_styleId="@array/button_raise_wave_color" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
