<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.emptypointer.hellocdut.ui.account.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_stu_id"
                    android:inputType="textEmailAddress"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/etPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_aao_pwd"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/str_commit"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:nextFocusForward="@+id/etNewPwd"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/bg_selectable_item"
                    android:src="@drawable/ic_eye_off" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etNewPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_new_pwd"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/str_commit"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imVisibleNewPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/bg_selectable_item"
                    android:src="@drawable/ic_eye_off" />

            </LinearLayout>

            <com.rey.material.widget.Button
                android:id="@+id/btnCommit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_try_reset_pwd"
                android:textColor="@color/color_ep_white"
                android:textStyle="bold"
                app:v_styleId="@array/button_raise_wave_color" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
